tests/type-error/CircularGlobal2.vix
type List a = Nil | Cons a (Ptr (List a))

ones = Cons 1 (Ptr ones)

test = case ones of
  Cons 1 (Ptr (Cons 1 (Ptr (Cons 1 _)))) -> printInt 111
  _ -> printInt 222
